# PyRetailHub

./: .env.example  Dockerfile  README.md  __main__.py  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py
app/routers/: __init__.py  customers.py  orders.py
app/schemas/: customer.py  orders.py
app/services/: customers.py  orders.py  retail_crm.py
