[tool.poetry]
name = "pyretailhub"
version = "0.1.0"
description = ""
authors = ["CHAMOMILE <CHAMOM2LES@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
httpx = "^0.28.1"
pydantic-settings = "^2.9.1"
black = "^25.1.0"
ruff = "^0.11.6"
pydantic = {extras = ["email"], version = "^2.11.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
